internal/gatewayapi/testdata/backendtrafficpolicy-admission-control.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-2
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
grpcRoutes:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: GRPCRoute
    metadata:
      namespace: default
      name: grpcroute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: http
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      namespace: default
      name: httproute-1
    spec:
      hostnames:
        - gateway.envoyproxy.io
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-2
          sectionName: http
      rules:
        - matches:
            - path:
                value: "/"
          backendRefs:
            - name: service-1
              port: 8080
backendTrafficPolicies:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: envoy-gateway
      name: policy-for-gateway
      generation: 10
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: gateway-1
      admissionControl:
        samplingWindow: 60s
        minSuccessRate: 90
        rejectionAggression: 2
        minRequestRate: 10
        maxRejectionPercent: 70
        successCriteria:
          grpc:
            grpcSuccessStatus:
              - Ok
              - Cancelled
              - DeadlineExceeded
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: BackendTrafficPolicy
    metadata:
      namespace: default
      name: policy-for-route
      generation: 20
    spec:
      targetRef:
        group: gateway.networking.k8s.io
        kind: HTTPRoute
        name: httproute-1
      admissionControl:
        samplingWindow: 30s
        minSuccessRate: 95
        successCriteria:
          http:
            httpSuccessStatus:
              - 200
              - 201
              - 204
